force-app/main/default/objects/cdcpc__RD_Control_Plan_Detail__c/cdcpc__RD_Control_Plan_Detail__c.object-meta.xml
<CustomObject>
    <label>RD Control Plan Detail</label>
    <nameField>
        <label>RD Control Plan Detail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Control Plan Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>