force-app/main/default/objects/cdcpc__RD_Control_Plan_Detail__c/fields/cdcpc__INNER_MIN__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__INNER_MIN__c</fullName>
    <label>INNER_MIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>