force-app/main/default/objects/cdcpc__RD_Control_Plan_Detail__c/fields/cdcpc__INSPECTION_CODE__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__INSPECTION_CODE__c</fullName>
    <label>INSPECTION_CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>