force-app/main/default/objects/cdcpc__RD_Control_Plan_Detail__c/fields/cdcpc__NORM_TYPE__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__NORM_TYPE__c</fullName>
    <label>NORM_TYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>