force-app/main/default/objects/cdcpc__RD_Control_Plan_Detail__c/fields/cdcpc__NumVal3__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__NumVal3__c</fullName>
    <label>NumVal3</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>