force-app/main/default/objects/cdcpc__RD_Control_Plan_Detail__c/fields/cdcpc__OUTER_MAX__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__OUTER_MAX__c</fullName>
    <label>OUTER_MAX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>