force-app/main/default/objects/cdcpc__RD_Control_Plan_Detail__c/fields/cdcpc__SAMPLE_PERCENT__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__SAMPLE_PERCENT__c</fullName>
    <label>SAMPLE_PERCENT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>