force-app/main/default/objects/cdcpc__RD_Control_Plan_Detail__c/fields/cdcpc__Special_Characteristic_Classification__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Special_Characteristic_Classification__c</fullName>
    <label>Special Characteristic Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>