force-app/main/default/objects/cdcpc__RD_Control_Plan_Detail__c/fields/cdcpc__Text8Val__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Text8Val__c</fullName>
    <label>Text8Val</label>
    <length>255</length>
    <type>Text</type>
</CustomField>