force-app/main/default/objects/cdcpc__RD_Control_Plan_Detail__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__Data_Point__c</columns>
    <columns>cdcpc__Test_OPNO__c</columns>
    <columns>cdcpc__OUTER_MIN__c</columns>
    <columns>cdcpc__Text1Val__c</columns>
    <columns>cdcpc__Text2Val__c</columns>
    <columns>cdcpc__Text3Val__c</columns>
    <columns>cdcpc__Text4Val__c</columns>
    <columns>cdcpc__Text5Val__c</columns>
    <columns>cdcpc__Text6Val__c</columns>
    <columns>cdcpc__OUTER_MAX__c</columns>
    <columns>cdcpc__Tool_ID__c</columns>
    <columns>cdcpc__NORM_TYPE__c</columns>
    <columns>cdcpc__DATA_TYPE__c</columns>
    <columns>cdcpc__Special_Characteristic_Classification__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cdcpc__Test_OPNO__c</field>
        <operation>equals</operation>
        <value>9640</value>
    </filters>
    <filters>
        <field>cdcpc__Text1Val__c</field>
        <operation>equals</operation>
        <value>HPN</value>
    </filters>
    <label>All</label>
</ListView>